update navigation active link states

--- a/espejo.html
+++ b/espejo.html
@@ -14,7 +14,6 @@
      <nav class="fixed top-0 w-full bg-white/95 backdrop-blur-sm shadow-lg z-50 border-b border-rose-100">
         <div class="max-w-6xl mx-auto px-4 py-4 flex items-center justify-between">
             <!-- Logo o título opcional -->
-            <span class="font-serif text-xl font-bold text-rose-400">Ale & Andre</span>
             <!-- Botón hamburguesa -->
             <button id="menuBtn" class="md:hidden flex items-center px-3 py-2 border rounded text-rose-400 border-rose-200 focus:outline-none">
                 <svg class="w-7 h-7" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -22,24 +21,25 @@
                 </svg>
             </button>
             <!-- Menú de navegación -->
-            <div id="navLinks" class="hidden md:flex justify-center space-x-8">
-                <a href="index.html" class="nav-btn nav-active px-4 py-2 rounded-full font-medium transition-all duration-300 hover:bg-rose-100" data-section="inicio">Inicio</a>
+        <div class="max-w-6xl mx-auto px-4 py-4">
+            <div class="flex justify-center space-x-8">
+                <a href="index.html" class="nav-btn px-4 py-2 rounded-full font-medium transition-all duration-300 hover:bg-rose-100" data-section="inicio">Inicio</a>
                 <a href="baile.html" class="nav-btn px-4 py-2 rounded-full font-medium transition-all duration-300 hover:bg-rose-100" data-section="baile">Baile</a>
                 <a href="civil.html" class="nav-btn px-4 py-2 rounded-full font-medium transition-all duration-300 hover:bg-rose-100" data-section="civil">Civil</a>
                 <a href="sillon.html" class="nav-btn px-4 py-2 rounded-full font-medium transition-all duration-300 hover:bg-rose-100" data-section="sillon">Sillón</a>
-                <a href="espejo.html" class="nav-btn px-4 py-2 rounded-full font-medium transition-all duration-300 hover:bg-rose-100" data-section="espejo">Espejo</a>
+                <a href="espejo.html" class="nav-btn nav-active px-4 py-2 rounded-full font-medium transition-all duration-300 hover:bg-rose-100" data-section="espejo">Espejo</a>
                 <a href="invitados.html" class="nav-btn px-4 py-2 rounded-full font-medium transition-all duration-300 hover:bg-rose-100" data-section="invitados">Fotos de Invitados</a>
             </div>
         </div>
-        <!-- Menú móvil desplegable -->
-        <div id="mobileMenu" class="md:hidden hidden bg-white border-t border-rose-100 px-4 pb-4">
-            <a href="index.html" class="block nav-btn nav-active px-4 py-2 rounded-full font-medium mt-2 transition-all duration-300 hover:bg-rose-100" data-section="inicio">Inicio</a>
-            <a href="baile.html" class="block nav-btn px-4 py-2 rounded-full font-medium mt-2 transition-all duration-300 hover:bg-rose-100" data-section="baile">Baile</a>
-            <a href="civil.html" class="block nav-btn px-4 py-2 rounded-full font-medium mt-2 transition-all duration-300 hover:bg-rose-100" data-section="civil">Civil</a>
-            <a href="sillon.html" class="block nav-btn px-4 py-2 rounded-full font-medium mt-2 transition-all duration-300 hover:bg-rose-100" data-section="sillon">Sillón</a>
-            <a href="espejo.html" class="block nav-btn px-4 py-2 rounded-full font-medium mt-2 transition-all duration-300 hover:bg-rose-100" data-section="espejo">Espejo</a>
-            <a href="invitados.html" class="block nav-btn px-4 py-2 rounded-full font-medium mt-2 transition-all duration-300 hover:bg-rose-100" data-section="invitados">Fotos de Invitados</a>
-        </div>
+    </div>
+    <!-- Menú móvil desplegable -->
+    <div id="mobileMenu" class="md:hidden hidden bg-white border-t border-rose-100 px-4 pb-4">
+        <a href="index.html" class="block nav-btn px-4 py-2 rounded-full font-medium mt-2 transition-all duration-300 hover:bg-rose-100" data-section="inicio">Inicio</a>
+        <a href="baile.html" class="block nav-btn px-4 py-2 rounded-full font-medium mt-2 transition-all duration-300 hover:bg-rose-100" data-section="baile">Baile</a>
+        <a href="civil.html" class="block nav-btn px-4 py-2 rounded-full font-medium mt-2 transition-all duration-300 hover:bg-rose-100" data-section="civil">Civil</a>
+        <a href="sillon.html" class="block nav-btn px-4 py-2 rounded-full font-medium mt-2 transition-all duration-300 hover:bg-rose-100" data-section="sillon">Sillón</a>
+        <a href="espejo.html" class="block nav-btn nav-active px-4 py-2 rounded-full font-medium mt-2 transition-all duration-300 hover:bg-rose-100" data-section="espejo">Espejo</a>
+        <a href="invitados.html" class="block nav-btn px-4 py-2 rounded-full font-medium mt-2 transition-all duration-300 hover:bg-rose-100" data-section="invitados">Fotos de Invitados</a>
     </nav>
 
     <!-- Main Content -->
